Closed Bug 540545 Opened 15 years ago Closed 14 years ago

NS_ERROR is very annoying in X86 maemo builds

Categories

(Core :: XPCOM, defect)

1.9.2 Branch
x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Use osso mem only in ARM builds (obsolete) — Splinter Review
/sys/kernel/high_watermark file is not available on scratchbox, and debug builds are producing a lot of errors
http://hg.mozilla.org/releases/mozilla-1.9.2/annotate/8400d5566f44/xpcom/base/nsMemoryImpl.cpp#l143
Attachment #422293 - Flags: review?(benjamin)
Attachment #422293 - Flags: review?(benjamin) → review?(mozbugz)
Comment on attachment 422293 [details] [diff] [review]
Use osso mem only in ARM builds

USE_ARM_KUSER is really for the cmpxchg kernel support.  How about using __arm__
Attached patch __arm__ versionSplinter Review
Attachment #422293 - Attachment is obsolete: true
Attachment #422785 - Flags: review?
Attachment #422293 - Flags: review?(mozbugz)
Attachment #422785 - Flags: review? → review?(mozbugz)
Attachment #422785 - Flags: review?(mozbugz) → review+
Keywords: checkin-needed
Fixed
http://hg.mozilla.org/mozilla-central/rev/cbba91f5de01
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: