Bug 540545 - NS_ERROR is very annoying in X86 maemo builds. r=dougt